# libgnome-keyring

./: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  configure.in  index.html  libgnome-keyring.doap  libtool  params.json  project.config
docs/: Makefile  Makefile.in
docs/reference/: Makefile  Makefile.in
docs/reference/gnome-keyring/: Makefile  Makefile.am  Makefile.in  gnome-keyring-docs.sgml  gnome-keyring-sections.txt
egg/: Makefile  Makefile.am  Makefile.in  egg-dh.c  egg-libgcrypt.c  egg-testing.c  egg-testing.h  egg-unix-credentials.c  egg-unix-credentials.h
egg/tests/: Makefile  Makefile.am  Makefile.in  test-dh.c  test-hkdf.c  test-secmem.c
po/: LINGUAS  Makefile  Makefile.in  POTFILES.in  an.po  as.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  et.po  fur.po  fy.po  gd.po  gl.po  km.po  kn.po  lv.po  mr.po  nb.po  pt.po  sl.po  tg.po  tr.po  ug.po  uz@cyrillic.po
tests/: gtest-helpers.c  gtest-helpers.h  gtest.make
